[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/TestOverlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/GameOptions.gd" type="Script" id=2]

[node name="GameOptions" type="Node"]
script = ExtResource( 2 )

[node name="TestOverlay" parent="." instance=ExtResource( 1 )]

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 276.0
margin_top = 113.0
margin_right = 443.0
margin_bottom = 291.0

[node name="Difficulty" type="Label" parent="Center/VBox"]
margin_right = 167.0
margin_bottom = 14.0
text = "Difficulty"
align = 1

[node name="Modes" type="HBoxContainer" parent="Center/VBox"]
margin_top = 18.0
margin_right = 167.0
margin_bottom = 38.0

[node name="Easy" type="Button" parent="Center/VBox/Modes"]
margin_right = 42.0
margin_bottom = 20.0
text = "EASY"

[node name="Medium" type="Button" parent="Center/VBox/Modes"]
margin_left = 46.0
margin_right = 114.0
margin_bottom = 20.0
text = "MEDIUM"

[node name="Hard" type="Button" parent="Center/VBox/Modes"]
margin_left = 118.0
margin_right = 167.0
margin_bottom = 20.0
text = "HARD"

[node name="Spacer1" type="Label" parent="Center/VBox"]
margin_top = 42.0
margin_right = 167.0
margin_bottom = 56.0
align = 1

[node name="ShowHealthBarLabel" type="Label" parent="Center/VBox"]
margin_top = 60.0
margin_right = 167.0
margin_bottom = 74.0
text = "Show Health Bar"
align = 1

[node name="ShowHealthBarButton" type="CheckButton" parent="Center/VBox"]
margin_top = 78.0
margin_right = 167.0
margin_bottom = 118.0
pressed = true

[node name="Spacer2" type="Label" parent="Center/VBox"]
margin_top = 122.0
margin_right = 167.0
margin_bottom = 136.0
align = 1

[node name="Spacer3" type="Label" parent="Center/VBox"]
margin_top = 140.0
margin_right = 167.0
margin_bottom = 154.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Center/VBox"]
margin_top = 158.0
margin_right = 167.0
margin_bottom = 178.0
text = "BACK"
[connection signal="pressed" from="Center/VBox/Modes/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Center/VBox/Modes/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Center/VBox/Modes/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Center/VBox/ShowHealthBarButton" to="." method="_on_ShowHealthBarButton_pressed"]
[connection signal="pressed" from="Center/VBox/Back" to="." method="_on_Back_pressed"]
